--- a/signup_page.css
+++ b/signup_page.css
@@ -144,5 +144,9 @@ header{
     .submit-btn:hover {
       background-color: #b80008;
     }
+    .submit-btn a{
+        text-decoration: none;
+        color: white;
+    } 
 
   
