--- a/style.css
+++ b/style.css
@@ -132,6 +132,10 @@ body{
       font-size: 16px;
       cursor: pointer;
     }
+.login-container .login-btn a{
+        text-decoration: none;
+        color: white;
+}
     .login-container .login-btn:hover {
       background: #b80008;
     }
